[gd_scene load_steps=3 format=2]

[ext_resource path="res://menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://menu/OptionNormal.png" type="Texture" id=2]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="OptionUp" type="Sprite" parent="."]
position = Vector2( 0, -50 )
texture = ExtResource( 2 )
flip_v = true

[node name="OptionLeft" type="Sprite" parent="."]
position = Vector2( -50, 0 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="OptionRight" type="Sprite" parent="."]
position = Vector2( 50, 0 )
rotation = 1.5708
texture = ExtResource( 2 )
flip_v = true

[node name="OptionDown" type="Sprite" parent="."]
position = Vector2( 0, 50 )
texture = ExtResource( 2 )
